# shawn-docx-qa

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: PUBLIC_BOUNDARY.md
examples/: toy_input.json
scripts/: public_safety_scan.py
src/shawn_docx_qa/: __init__.py
tests/: test_public_scaffold.py
