[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shawn-docx-qa"
version = "0.1.0"
description = "Public-safe DOCX metadata and structure QA utilities for document workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "SHawn"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
